Kickstart 7.0.1
================================================================================
+ Informative error message when your PHP version is too old for this version of Kickstart
+ Print a warning when your PHP version is End of Life

Kickstart 7.0.0
================================================================================
+ Dark Mode

Kickstart 6.0.2
================================================================================
~ PHP 7.4 support
# [LOW] Fixed selecting the correct file while importing from Amazon S3

Kickstart 6.0.1
================================================================================
# [HIGH] Error extracting archives under PHP 7.3

Kickstart 6.0.0
================================================================================
- Removing all external Javascript dependencies (e.g. jQuery)

Kickstart 5.5.1
================================================================================
# [HIGH] Untranslated strings shown when running Kickstart
# [LOW] Fixed references to possibly undefined KSSELFNAME

Kickstart 5.5.0
================================================================================
+ Option to delete all files / folders before extraction. DANGEROUS. For advanced users only. Available only in the Pro version.
~ Fine tuning settings are visible by default and come with visible help text
~ Added a Start button near the archive selection since most users don't need to set up Kicksart's FTP or Hybrid file writer
~ restore.php: protect against insane 3PDs enabling direct unauthenticated access to remote.php
~ restore.php: hardening against left over restoration.php files
# [MEDIUM] Time settings were not taken into account

Kickstart 5.4.2
================================================================================
~ Internal improvements relating to the Site Transfer Wizard

Kickstart 5.4.1
================================================================================