@@ -2,6 +2,7 @@ Kickstart 7.0.1
 ================================================================================
 + Informative error message when your PHP version is too old for this version of Kickstart
 + Print a warning when your PHP version is End of Life
+~ Changed the documentation URLs following documentation refactoring on our site.
 
 Kickstart 7.0.0
 ================================================================================
